--- a/thesis/bitr/BiTR-0.tex
+++ b/thesis/bitr/BiTR-0.tex
@@ -10,7 +10,8 @@
 \input{bitr/related}
 
 \section{Motivating Holmes}
-While we designed this system before the inception of {\sysname}, its operation matches the computational patterns we will introduce when we describe the language (\S~\ref{chap:holmes}).
+\bitr was designed before the inception of {\sysname}.
+Despite this, its operation matches the computational patterns we will introduce when we describe the language (\S~\ref{chap:holmes}).
 The constraint generation step matches simple Datalog rules, with external predicates or an equivalent feature (\S~\ref{holmes:sec:callback}).
 We process SSA instructions one at a time and transform them into constraints to try to simultaneously satisfy.
 The solving phase matches up with the aggregation feature (\S~\ref{holmes:sec:agg}).
