Remove unneeded reference to kripke

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -85,7 +85,7 @@ This adaptation allows Holmes to resolve an output even in the case of a negatio
 This is concretely the case in the use of VSA to resolve function pointers.
 We also investigated different implementation approaches for \sysname (\S~\ref{holmes:sec:impl}).
 
-We define the semantics of the resulting logic language in terms of a Kripke structure (\S~\ref{chap:formal}).
+We provide a formal semantics for our logic language (\S~\ref{chap:formal}).
 These semantics enhance the ability to reason about the results of an analysis by formally constraining what derivations the analysis engine may follow.
 They also make it possible to determine compliance for alternative implementations of the engine, potentially allowing programs to run on backends other than the initial one written for this thesis.
 
