--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -10,37 +10,44 @@ Function locations, variable locations and bounds, variable types, and control f
 
 %   * CFG unknown
 The inability to recover a complete control graph can be one of the more difficult challenges to deal with.
-Many algorithms for recovering any of the other missing abstractions depend strongly on having a pre-existing control flow graph\cite{vsa,bddbddb,smash,tie,bitr,wrappedintervals,ramalingam2000}.
-However, without the abstractions present in the source language, determining the potential targets of an indirect (computed) jump becomes difficult, if not impossible.
-Being unsound here by asserting complete knowledge of control flow in cases where only partial knowledge is available can result in unsoundness in every analysis down the road, but frequently use ``good enough'' approximations due to the difficulty of this problem.
+Algorithms for recovering any of the other missing abstractions depend strongly on having a pre-existing control flow graph\cite{vsa,bddbddb,smash,tie,bitr,wrappedintervals,ramalingam2000}.
+However, determining the potential targets of an indirect (computed) jump becomes more difficult without the abstractions present in the source language.
+Being unsound here by asserting complete knowledge of control flow in cases where only partial knowledge is available can result in unsoundness in every downstream analysis.
+Despite this, real systems frequently use ``good enough'' approximations due to the difficulty of this problem.
 
 %   * Extraordinarily stateful, with large state
 One of the features of functional code that makes it easier to analyze is its thorough reduction of state.
-Traditional procedural/imperative languages make this slightly more difficult through the use of variables, expanding the set of implicit inputs to each step greatly.
+Traditional procedural or imperative languages make this slightly more difficult through the use of state variables which expand the set of implicit inputs to each step greatly.
 Binary code is yet more difficult to analyze.
-With information about variables, arrays, or inputs, it becomes quickly difficult to determine what parts of memory and registers are really live.
-Due to the lack of scope or lifetime abstractions, once a new piece of state enters an execution, it is rare for it to leave at a later point --- much of the program image in memory is potential state.
+It becomes quickly difficult to determine what parts of memory and registers are really live without abstractions like array bounds or variable scoping.
+It is difficult statically to know whether the process may access a given piece of state in the future.
+The resulting problem size is larger because execution effectively ``leaks'' state that existing analysis cannot determine will be unreachable.
 
 \subsection{Control Flow Recovery}
 \label{sec:cfg}
 The goal of control flow recovery is to generate a complete graph of possible program counter transitions in the program while containing minimal number of spurious edges.
 The simple form of control flow recovery involves performing recursive descent disassembly from a given entry point and watching for a transition to a distinguished exit node (usually via a function return).
-However, indirect jumps due to function pointers, C++ virtual method calls, and even creative compilation of case statements can wreak havoc on this method, since the value of the jump target to is not known ahead of time.
+However, indirect jumps due to function pointers, C++ virtual method calls, and even creative compilation of case statements can wreak havoc on this method since the value of the jump target to is not known ahead of time.
 
 In each of the above cases, the compiler would be able to accurately determine the range of jump targets based on its own code generation information and information present in the source code.
 The type of a C++ object determines a small subset of legal function targets for a given method.
-Switch statements have explicit targets, and so the compiler knows where it might go.
-Function pointers are the most difficult to resolve, but the compiler at least has the ability to restrict the possible targets to functions of the right type, or in a conservative approximation to any function.
-All of these methods are not directly usable on raw compiled code, since compilation stripped the abstractions away.
+The compiler can determine where jumps which came from switch statements will go as they have explicit targets in the source.
+Function pointers are the most difficult to resolve.
+At the source level, the compiler at least has the ability to restrict the possible targets to functions of the right type.
+Compilation strips away abstractions needed to perform any of these analyses.
+This renders them useless for direct use on raw compiled code.
 
 \subsection{Value Analysis}
 \label{sec:valanal}
 It follows that recovering over-approximations of the range of potential values for pieces of state in a program would be useful.
 One common way to do this is to perform abstract interpretation of the program over a domain designed to model the range of values well~\cite{vsa,wrappedintervals,wrappedintervals2}.
 
-Unfortunately, this abstract interpretation assumes that the control flow graph has already known in order to sequence its transformations.
+Unfortunately, Value Set Analysis\footnote{
+  Value Set Analysis is the current state of the art for value analysis over compiled code.
+} (VSA) assumes that the control flow graph has already known in order to sequence its transformations.
 Additionally, it can lose nearly all its precision by loops whose transformations are not well represented by its particular domain.
-The state of the art approach to the co-dependence of the control flow recovery and value analysis problems is to combine value analysis with control flow recovery, allowing the creation of new paths from new values, which in turn re-inform the value analysis~\cite{jakstab}.
+The state of the art approach to the co-dependence of the control flow recovery and value analysis problems is to iterate control flow recovery followed by value analysis.
+This process allows the creation of new paths from new values, which in turn re-inform the value analysis~\cite{jakstab}.
 
 \subsection{Type Recovery}
 Another important static analysis is type recovery.
@@ -48,10 +55,11 @@ A binary program may not necessarily have a traditional assignment of types to v
 However, source language requirements and programmer volition make it likely that there is a useful assignment of types.
 Even assembly programmers and dynamic language users~\cite{jsinfer} usually use consistent types to some extent.
 
-Since compilation removed type annotations, there are two primary sources for type information: propagation from API/ABI boundaries and how the program interacts with the structure of the data.
+There are two primary sources for type information after the compiler strips abstractions: propagation from API/ABI boundaries and how the program interacts with the structure of the data.
 Propagation~\cite{howard} of type information from code boundaries entails knowing a priori that a particular library or service in use by the program matches some signature, then following definitions of its arguments and uses of its results to annotate the program with this information.
-This helps some, but encounters difficulties with any kind of internal data structure.
-Usage based analysis~\cite{tie,bitr} tends to perform better at recovering internal structures, and works by examining how the code defines and uses state and generating constraints for types based on that.
+This technique is straightforward and keeps useful information like type and field names. 
+Unfortunately, it encounters difficulties with any kind of internal data structure.
+Usage based analysis~\cite{tie,bitr} to perform better at recovering internal structures, and works by examining how the code defines and uses state and generating constraints for types based on that.
 
 \input{alias/background}
 
@@ -63,30 +71,33 @@ However, being path oriented limits these techniques to describing what could ha
 
 %   * Fuzzing
 \subsubsection{Fuzzing}
-One common modern way to find issues in code, especially code not in a form intended for human consumption (such as compiled code), is to simply perform a large number of executions with varied inputs.
+One common modern way to find issues in code is to simply perform a large number of executions with varied inputs.
 This technique is known as ``fuzzing'', and is widely used in the search for security flaws.
+Fuzzing is especially useful for analyzing compiled code as it does not rely on source-level abstractions.
 The primary two defining axes of fuzzing are blackbox~\cite{peach,zzuf,rebert2014} vs whitebox~\cite{klee,godefroid2008,avgerinos2014} and generational~\cite{peach} vs mutational~\cite{zzuf}.
 
 %   * Symbolic Execution + SMT
 \subsubsection{Symbolic Execution}
 A slightly more sophisticated (though more expensive) approach is to keep inputs ``symbolic'' while executing.
-Essentially, if an exact value is not needed in order to take a step, the evaluator uses expressions based on inputs in place of concrete values.
-When a the evaluator encounters a conditional branch, it extends path constraint by conjunction with the condition, restricting the range of feasible inputs for this execution.
-When the next instruction is a potentially dangerous operation (such as jumping to or dereferencing a symbolic value), an SMT solver can check a formula for the plausibility of the ``bad'' scenario\footnote{\
+Essentially, the evaluator uses expressions based on input variables in the place of concrete values unless the evaluator requires a concrete value to take a step.
+When a the evaluator encounters a conditional branch, it extends path constraint by conjunction with the condition.
+This restricts the range of feasible inputs for this execution.
+When the next instruction is a potentially dangerous operation (such as jumping to or dereferencing a symbolic value), a SMT solver can check a formula for the plausibility of the ``bad'' scenario\footnote{\
   SMT stands for Satisfiability Modulo Theory.
   It is a SAT solver whose variables have extra domains and additional operations.
   The SMT solvers discussed here operate over the theory of bitvectors.
 }.
 The execution engine constructs the formula by taking the conjunction of the path constraint with whatever condition suffices to cause the badly behaved event.
-If the SMT solver returns a solution, that solution describes a bug-causing input\cite{aeg,mayhem}.
-If instead of simply sufficing, the condition passed is complete (i.e.\ the operation is \emph{only} dangerous if the formula is satisfiable), the SMT solver returning UNSAT gives safety, but for \emph{this path only}.
-Since loops may create an infinite number of paths, it is difficult to demonstrate that any region is safe this way, but receiving a concrete trace which exercises a bug condition is a major benefit.
+If the SMT solver returns a satisfying assignment to the formula, that solution describes a bug-causing input\cite{aeg,mayhem}.
+If the formula passed is complete (the operation is \emph{only} dangerous if the formula is satisfiable), an UNSAT response from the SMT solver give safety for \emph{this path only}.
+Since loops may create an infinite number of paths, it is difficult to demonstrate that any region is safe this way.
+The major benefit of the symbolic execution and SMT approach is that it results in a concrete trace which exercises a bug condition.
 
 % Logic Language
 \section{Logic Language}
 Logic languages are a family of declarative programming languages which express computation as a series of rules used to derive a conclusion.
 This makes them well suited to the task at hand because it allows us to describe the provenance of information and to separate the execution strategy for a suite of analyses from the expression of said analyses.
-We will review Datalog and Prolog as a way of giving a general overview of logic programming, but these are not the only logic languages.
+We will focus our review on Datalog and Prolog as exemplars of two styles of logic programming.
 % * Datalog
 \subsection{Datalog}
 \label{sec:fchain}
@@ -99,7 +110,7 @@ For example,
 represents a relation in which the left argument is the parent of the right argument.
 %   * Facts
 A ``fact'' is a particular member of a relation.
-Here, we use italics to denote a constant.
+We use italics to denote a constant.
 As an example,
 \[
         \pred{parent}{\id{alice}, \id{bob}}
@@ -107,19 +118,20 @@ As an example,
 represents the fact that $\id{alice}$ is $\id{bob}$'s parent.
 The set of facts known is sometimes referred to as the database.
 The database has two parts: extensional and intensional.
-The extensional portion of the database is those facts which the program author or user provides to the system prior to execution, while the intensional database consists of those derived from the extensional database.
+The extensional portion of the database is those facts which the program author or user provides to the system prior to execution; the intensional database consists of those derived from the extensional database.
 %   * Rules
-In order to actually perform computation with this system and create such an extensional database, logic languages use ``rules'', which function similarly to inference rules from traditional proof writing.
+In order to actually perform computation with this system and create such an extensional database logic languages use ``rules'' which function similarly to inference rules from traditional proof writing.
 To write rules, I'll use $\var{X}$ to represent a variable named x.
 Following in the vein of the previous examples,
 \[
         \frule{\pred{sibling}{\var{X}, \var{Y}}}{\pred{parent}{\var{P}, \var{X}}, \pred{parent}{\var{P}, \var{Y}}}
 \]
 expresses that if for some assignment to $\var{P}$, $\var{X}$, and $\var{Y}$, we know that $\var{X}$ shares parent $\var{P}$ with $\var{Y}$, then we can derive that $\var{X}$ and $\var{Y}$ are siblings.
-The left hand side is referred to as the \emph{head clause} and represents the template used to build new facts with this rule.
-The right hand side is called the \emph{body clause} and describes the search or match which must have a result on the database.
-An evaluation engine applies rules``to saturation'', meaning that it applies all rules repeatedly until the body clause no longer has any new matches in the database.\footnote {
-Without external code, this is equivalent to ``the head clause is in the database, or the body clause does not match``. However, with external code, the head clause is not necessarily predictable, so we instead describe each rule triggering at most once per assignment of variables which matches the database.
+The left hand side is the \emph{head clause} and represents the template used to build new facts with this rule.
+The right hand side is the \emph{body clause} and describes the search or match which must have a result on the database.
+An evaluation engine applies rules``to saturation''.
+This means that it applies all rules repeatedly until the body clause no longer has any new matches in the database.\footnote {
+Without external code, this is equivalent to ``the head clause is in the database, or the body clause does not match``. With external code however, the head clause is not necessarily predictable, so we instead describe each rule triggering at most once per assignment of variables which matches the database.
 }
 Given this, rule declaration order is irrelevant.
 \footnote{
@@ -142,9 +154,9 @@ We take the sibling rule from the earlier example, and also
 \]
 which indicates that someone is an uncle if they are that person's parent's sibling.
 
-With the rules and extensional database in hand, we can compute the complete database.
+We can compute the complete database from these rules and the extensional database.
 The uncle rule cannot apply, since there are no facts for the sibling predicate.
-So, first applying the sibling rule to saturation yields a database of
+Applying the sibling rule to saturation yields a database of
 \begin{gather*}
         \pred{parent}{\id{alice}, \id{bob}}
         \quad \pred{parent}{\id{alice}, \id{charlie}}
@@ -169,7 +181,7 @@ Doing so to saturation yields
         \pred{uncle}{\id{charlie}, \id{deb}}
         \quad \pred{uncle}{\id{charlie}, \id{ed}}
 \end{gather*}
-At this point, neither rule applies, and so the program has finished.
+At this point, the program has finished because neither rule applies, and so the program has finished.
 It has also derived the only two uncle facts possible.
 \subsubsection{Example: Related}
 Alternatively, perhaps we only wish to know if two people are related.
@@ -179,8 +191,9 @@ Consider the rules
         \frule{\pred{related}{\var{Y}, \var{X}}}{\pred{related}{\var{X}, \var{Y}}}\\
         \frule{\pred{related}{\var{X}, \var{Z}}}{\pred{related}{\var{X}, \var{Y}}, \pred{related}{\var{Y}, \var{Z}}}
 \end{gather*}
-This is potentially more interesting because it is a recursive build up of information, unlike the previous example which is representable as a two-step procedure: find the siblings, then find siblings of parents.
-However, since Datalog applies its rules until saturation, this is not any more difficult than the previous query.
+We could structure the previous rule set as a two-step procedure: find the siblings, then find siblings of parents.
+This rule set is potentially more interesting because it is a recursive build up of information.
+However, this is not any more difficult than the previous query since Datalog applies its rules to saturation.
 The first rule translates a parent/child relationship into a ``related'' relationship.
 The second provides symmetry.
 The third provides transitivity.
@@ -189,16 +202,17 @@ Execution proceeds much the same as the previous example, simply firing each rul
 The only real difference is that the second and third rule will fire recursively.
 %   * Termination
 \subsubsection{Termination}
-It might be surprising to realize that despite allowing recursive rules, the language as described thus far is actually terminating.
+It might be surprising to realize that the language as described thus far is actually terminating despite allowing recursive rules.
 Head clauses construct facts with variables or directly with values.
 If constructed with a variable, the body clause must bind that variable.
 If a body clause binds a variable to a value, that value must have been in the database.
 As a result, the only possible values are those which were in the extensional database and those mentioned concretely in the rules.
-With a finite domain of values, and a finite list of predicates, there is a finite list of facts which any execution could instantiate.
+With a finite domain of values and a finite list of predicates, there is a finite list of facts which any execution could instantiate.
 
-Evaluation is a series of steps, each of which fires the first rule it can find which matches, or if none match, terminate.
+Evaluation is a series of steps.
+Each step fires the first rule it can find which matches, or if no rule matches, terminates.
 Since this evaluation strategy is always productive or terminating, and we have established a finite upper bound on the database, we have a bound on the length of such an evaluation.
-Since this evaluation strategy only produces facts according to the rules, and only stops when no rules apply, it matches the saturation/fixpoint semantics of Datalog.
+This evaluation strategy matches the saturatin/fixpoint semantics of Datalogs because it only produces facts according to the rules and only stops when no rules apply.
 
 There are some important caveats to termination as a language feature.
 %
@@ -216,12 +230,15 @@ It is possible to encode arithmetic over some finite domain (e.g.,\ $0-(2^{64} -
 However, having such a table is massively impractical.
 
 %   * External predicates
-One way to deal with this issue is to introduce external predicates: predicates whose truth is not defined by presence in the database, but is rather computed or queried from some external system when needed.
+One way to deal with this issue is to introduce external predicates: predicates whose truth is not defined by presence in the database.
+Instead, the engine computes or queries its truth from some external system when needed.
 This leads to the need for a mode system.
 Consider an external predicate $\pred{sum}{\cdot, \cdot, \cdot}$, where the first entry is the sum of the other two.
-When trying to match the body clause of a rule, it becomes important that at the match algorithm sends at least two values to th external code; if only it only sends one, the resulting match set will have the enormous size of $|\mathbf{D}|^2$ where $\mathbf{D}$ is our domain set.
+When trying to match the body clause of a rule, it becomes important that at the match algorithm sends at least two values to the external code; if only it only sends one, the resulting match set will have the enormous size of $|\mathbf{D}|^2$ where $\mathbf{D}$ is our domain set.
 In the case of functions designed to be hard to invert (e.g.,\ a hash function), this becomes not only a result size concern and an actual implementability concern.
-To deal with this, external predicates can have mode signatures, explaining which entries are logical inputs, and which are outputs. For example, we could have
+To deal with this, external predicates can have ``mode signatures''.
+These signatures explain which entries are logical inputs and which are outputs.
+For example, we could have
 \[
         \pred{sum}{-, +, +} \quad \pred{hash}{-, +}
 \]
@@ -234,14 +251,14 @@ rather than needing to assume the presence of subtraction and possible-addends o
 %   * External predicates can break termination
 Unfortunately, adding external predicates adds all possibilities for their result values to the upper bound for the termination.
 Adding an external predicate which only produces a small type such as a boolean has little effect on our ability to bound execution.
-Adding a large, but still finite bounded type like $\texttt{uint64}$ makes any numerical approximation of runtime from value count irrelevant, but still technically gives termination.
+Adding a finite-but-large type like $\texttt{uint64}$ makes any numerical approximation of runtime from value count irrelevant, but still technically gives termination.
 Adding a type with non-finite size like lists or strings \emph{breaks termination}.
 As a simple example, consider an external predicate which appends the character `a' called `extend'. Then
 \begin{gather*}
   \frule{\pred{infinite}{\var{X}}}{\pred{infinite}{\var{Y}}, \pred{extend}{\var{Y}, \var{X}}}\\
   \pred{infinite}{``''}
 \end{gather*}
-provides a simple infinite loop, extending the string with more `a's forever.
+provides a simple infinite loop by extending the string with more `a's forever.
 
 \subsubsection{Backwards Chaining}
 \label{sec:bchain}
@@ -249,9 +266,9 @@ The evaluation model discussed thus far is what is commonly known as forward cha
 This approach searches for a proof by taking known facts and deriving anything they can hoping to reach the goal.
 However, there are some applications for which this approach does not work well --- as an example, any system that would have a potentially infinite intensional database would never complete execution with such a semantics.
 
-The other approach is backwards chaining, or top-down search, and is what Prolog uses.
+Prolog uses the opposite approach: backwards chaining or top-down search.
 In backwards chaining, a particular goal match directs the search rather than enumerating all possible derivations from available information.
-The logic engine examines the goal and the available rules, and by unification breaks it down to a series of potential subgoals, and recurses.
+The logic engine examines the goal and the available rules and breaks it down via unification to a series of potential subgoals, then recurses.
 
 \subsection{Negation}
 %   * Stratified negation
@@ -273,7 +290,8 @@ Traffic serviceable by the local network should be directly sent, while the rema
 In the case of this set of rules, negation has a clear interpretation.
 First, generate all reachability predicates.
 Then, if reachable was not derivable thus far, matches against not reachable should succeed.
-However, when recursive rules and negation mix, it can cause termination and stability issues. Consider the set of rules:
+However, recursive rules and negation can mix to cause termination and stability issues.
+Consider the set of rules:
 \begin{gather*}
         \frule{\pred{p}{\var{X}}}{\neg \pred{q}{\var{X}}}\\
         \frule{\pred{q}{\var{X}}}{\neg \pred{p}{\var{X}}}
@@ -282,7 +300,7 @@ There is no interpretation of this which terminates with the fixpoint semantics,
 To deal with this, Datalog imposes a requirement on negation known as stratification.
 It is possible to phrase this requirement as a graph property:
 
-Create a graph where the predicates are nodes, and there is an edge between two nodes iff there is a rule in the program which uses the source node predicate as a premise to derive the destination node predicate.
+Create a graph where the predicates are nodes with an edge between two nodes iff there is a rule in the program which uses the source node predicate as a premise to derive the destination node predicate.
 Additionally, label all those edges where the with a negated premise predicate.
 There must be no cycles which include one or more negated edges.
 
@@ -337,8 +355,9 @@ Specifically, we now know that $\neg P(4)$.
 %   * Negation as circumscription yields stratified negation
 \subsubsection{Relation to Logic Programming}
 Circumscription is directly connected to modern logic programming through the negation features present in some logic language dialects.
-We express the database and rules as a single logical formula, with conjunction of known facts as predicates applied to concrete values and rules encoded as implications.
-Circumscribing over this formula will yield results consistent with a given logic program, yet also allow us to potentially derive more by giving us an explicit definition of a predicate.
+We express the database and rules as a single logical formula by encoding as a conjunction of known facts as predicates applied to concrete values and rules encoded as implications.
+Circumscribing over this formula will yield results consistent with a given logic program.
+It will also allow us to potentially derive more by giving us an explicit definition of a predicate.
 Circumscription provides the theoretical underpinnings for stratified negation.
 For example, take the system
 \begin{gather*}
@@ -349,7 +368,7 @@ For example, take the system
         \brule{\pred{penny}{\var{X}}}{\pred{copper}{\var{X}}, \pred{circle}{\var{X}}}\\
 \end{gather*}
 If we ask ``Is $\id{y}$ a penny?'', i.e.\ $\query{\pred{penny}{\id{y}}}$, the system without circumscription cannot answer yes.
-There is no way to derive that $\id{y}$ is circular, or failing that, that it is simply non-square.
+The system cannot derive that $\id{y}$ is circular because it neither knows that a priori, nor does it know that it is non-square.
 Circumscribing over both $\pred{square}{\cdot}$ and $\pred{silver}$ in the system allows us to derive $\neg \pred{square}{\id{y}}$ and $\neg \pred{silver}{\id{y}}$.
 In this way, circumscription forms the basis for the form of negation present in logic languages.
 
